added JUCECC common code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,7 @@ cmake_minimum_required(VERSION 3.22)
 project(EARL VERSION 0.0.1)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 add_subdirectory(../JUCE ${CMAKE_CURRENT_BINARY_DIR}/JUCE)
+add_subdirectory(libs/JUCECC)
 # If you are building a VST2 or AAX plugin, CMake needs to be told where to find these SDKs on your
 # system. This setup should be done before calling `juce_add_plugin`.
 
